# Computer-Vision

./: README.md  pyproject.toml
Lab1/: lab1.ipynb
Lab2/: CV_lab2.ipynb  CV_lab2_v2.ipynb
Lab3/: CV_lab3.ipynb
Lab4/: CV_lab4.ipynb
Lab5/: CV_lab5.ipynb
