[tool.poetry]
name = "computer-vision"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "computer_vision"}]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.23.3"
jupyter = "^1.0.0"
opencv-python = "^4.6.0.66"
matplotlib = "^3.6.1"
tensorflow = "^2.10.0"
tensorflow-probability = "^0.18.0"
tensorflow-addons = "^0.18.0"
tensorflow-io = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
